[metadata]
name = be8bbbce
description = Ben Eater's 8-bit breadboard computer emulator
author = Doug Hoskisson
license = AGPL
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    be8bbbce
install_requires =
    pygame>=2
python_requires = >= 3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.2
    pytest-cov>=3.0
    mypy>=0.910
    flake8>=4.0
    tox>=3.4

[options.package_data]
be8bbbce = py.typed

[flake8]
max-line-length = 120
ignore =
    E203,
    E252,
    W503
